session-6/order-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: sushantdey/order-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200"
