session-6/order-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: prod
  labels:
    app: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
